delete '_pp' related

--- a/PaddleCV/tracking/pytracking/visualize_results_on_benchmark.ipynb
+++ b/PaddleCV/tracking/pytracking/visualize_results_on_benchmark.ipynb
@@ -21,8 +21,8 @@
     "from videofig import videofig\n",
     "\n",
     "sys.path.append('..')\n",
-    "from pytracking_pp.pysot_toolkit.datasets import DatasetFactory\n",
-    "from pytracking_pp.pysot_toolkit.environment import env_settings\n",
+    "from pytracking.pysot_toolkit.datasets import DatasetFactory\n",
+    "from pytracking.pysot_toolkit.environment import env_settings\n",
     "\n",
     "# set the dataset name here\n",
     "dataset_name = 'CVPR13'\n",
